--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,1 +1,3 @@
-<%= render partial: 'form', locals: {student: @student} %>
+<%= form_for @student do |f|%>
+  <%= render partial: 'students/fields', locals: {f: f} %>
+<% end %>
