Automatically backed up by Learn

--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -1,4 +1,5 @@
 Classroom Info
+<%= render partial: 'classroom', locals: {student: @student} %>
 
 
 We now want to call out the oldest student in the class:
