--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -3,5 +3,5 @@ Classroom Info
 
 
 Student in the class:
-<% @classroom.students
-<%= render 'students/student' %>
+<% @students.each do |s| %>
+  <%= render p'students/student' %>
